// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColumnGrid /> setup a vertical spacing grid 1`] = `
<div
  className="FlexGrid__ColumnGrid-auw7uc-2 kUCwEq"
/>
`;

exports[`<FlexGrid.Item> adapt css to flex values 1`] = `
<div
  className="FlexGrid__Item-auw7uc-1 hroMdl"
/>
`;

exports[`<FlexGrid.Item> adapt css to flex values 2`] = `
<div
  className="FlexGrid__Item-auw7uc-1 fgWlbG"
/>
`;

exports[`<FlexGrid.Item> adapt css to flex values 3`] = `
<div
  className="FlexGrid__Item-auw7uc-1 eMNDdg"
/>
`;

exports[`<FlexGrid> renders inline or as block 1`] = `
<div
  className="FlexGrid__FlexGrid-auw7uc-0 bHHZdg"
/>
`;

exports[`<FlexGrid> renders inline or as block 2`] = `
<div
  className="FlexGrid__FlexGrid-auw7uc-0 kjnORm"
/>
`;
